--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-	<version>1.165.0-SNAPSHOT</version>
+        <version>1.167.0</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -43,14 +43,22 @@
         <repository>
             <id>codingmatters-snapshots</id>
             <url>https://mvn.ci.flexio.io/codingmatters-snapshots/</url>
-            <releases><enabled>false</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>codingmatters-releases</id>
             <url>https://mvn.ci.flexio.io/codingmatters-releases/</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>false</enabled></snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -58,14 +66,22 @@
         <pluginRepository>
             <id>codingmatters-snapshots</id>
             <url>https://mvn.ci.flexio.io/codingmatters-snapshots/</url>
-            <releases><enabled>false</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </pluginRepository>
         <pluginRepository>
             <id>codingmatters-releases</id>
             <url>https://mvn.ci.flexio.io/codingmatters-releases/</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>false</enabled></snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
@@ -81,7 +97,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.175.0-SNAPSHOT</flexio-commons.version>
+        <flexio-commons.version>1.175.0</flexio-commons.version>
     </properties>
 
     <dependencies>
