--- a/poom-crons-cronned-harness/pom.xml
+++ b/poom-crons-cronned-harness/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.190.0</version>
+        <version>1.191.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>poom-crons-cronned-harness</artifactId>
