--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <module>poom-crons-service</module>
 
         <module>poom-crons-cronned-harness</module>
+        <module>poom-crons-test-apis</module>
     </modules>
 
     <properties>
@@ -146,6 +147,12 @@
             <dependency>
                 <groupId>org.codingmatters.poom.crons</groupId>
                 <artifactId>poom-crons-cronned-harness</artifactId>
+                <version>1.203.0-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codingmatters.poom.crons.test.apis</groupId>
+                <artifactId>poom-crons-test-apis</artifactId>
                 <version>1.203.0-SNAPSHOT</version>
             </dependency>
             <!--// BOM-->
