--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-        <version>1.228.0</version>
+        <version>1.229.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -98,7 +98,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.232.0</flexio-commons.version>
+        <flexio-commons.version>1.233.0-SNAPSHOT</flexio-commons.version>
     </properties>
 
     <dependencies>
