--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-        <version>1.229.0-SNAPSHOT</version>
+        <version>1.229.0</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -17,6 +17,10 @@
 
     <name>Poor Man's Crontab</name>
     <url>https://github.com/flexiooss/poom-crons</url>
+
+    <properties>
+        <flexio-commons.version>1.233.0</flexio-commons.version>
+    </properties>
 
     <licenses>
         <license>
@@ -96,10 +100,6 @@
         <module>poom-crons-cronned-harness</module>
         <module>poom-crons-test-apis</module>
     </modules>
-
-    <properties>
-        <flexio-commons.version>1.233.0-SNAPSHOT</flexio-commons.version>
-    </properties>
 
     <dependencies>
         <dependency>
