--- a/poom-crons-cronned-harness/pom.xml
+++ b/poom-crons-cronned-harness/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.codingmatters.poom.crons</groupId>
             <artifactId>poom-crons-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-instrumentation-annotations</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
