--- a/poom-crons-service/pom.xml
+++ b/poom-crons-service/pom.xml
@@ -38,6 +38,10 @@
             <groupId>org.codingmatters.poom</groupId>
             <artifactId>poom-services-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-instrumentation-annotations</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.codingmatters.poom</groupId>
