--- a/poom-crons-test-apis/pom.xml
+++ b/poom-crons-test-apis/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.253.0-SNAPSHOT</version>
+        <version>1.253.0</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons.test.apis</groupId>
